commit-reda(I just added a role for eache member

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <!-- =========================================
-         MEMBER 2 AREA: ABOUT CLUB
+         MEMBER Reda AREA: ABOUT CLUB
          Branch Name: feature-about
          Task: Add a description and an 'About' image placeholder.
          ========================================= -->
@@ -55,6 +55,8 @@
             <div class="about-grid">
                 <!-- TODO: Member 2 code goes here -->
                 <div class="about-text fade-in-left">
+                    <p>this is the description of reda </p>
+
                     <p>We are a community of passionate developers, designers, and tech enthusiasts. Our mission is to bridge the gap between academic theory and real-world application.</p>
                     <ul class="stats-list">
                         <li><strong>50+</strong> Members</li>
@@ -64,7 +66,7 @@
                 </div>
                 <div class="about-image fade-in-right">
                     <div class="img-placeholder">
-                        <img src="assets/ItGeeks.png" alt="IT Geeks Club Photo" class="club-photo">
+                        <p>About <img src="assets/ItGeeks.png" alt="IT Geeks Club Photo" class="club-photo"></p>
                     </div>
                 </div>
                 <!-- End Member 2 -->
@@ -124,24 +126,28 @@
                     <div class="avatar-placeholder"></div>
                     <h4>Alex Johnson</h4>
                     <span>Member 1</span>
+                    <p>Role: frontend</p>
                 </div>
                 <!-- Member 2 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
                     <h4>Sarah Lee</h4>
                     <span>Member 2</span>
+                    <p>Role : Backend</p>
                 </div>
                 <!-- Member 3 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
                     <h4>Mike Chen</h4>
                     <span>Member 3</span>
+                    <p>Role: Ml engineer</p>
                 </div>
                 <!-- Member 4 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
                     <h4>Emily Davis</h4>
                     <span>Member 4</span>
+                    <p>Role : cloud data engineer</p>
                 </div>
                 <!-- End Member 4 -->
             </div>
