--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
                     <h3>Cyber Security</h3>
                     <p>Understand ethical hacking, encryption, and network safety.</p>
                 </div>
+                <div class="card fade-up delay-300">
+                    <div class="card-icon"></div>
+                    <h3>Web</h3>
+                    <p>website</p>
+                </div>
+                <div class="card fade-up delay-400">
+                    <div class="card-icon"></div>
+                    <h3>ai</h3>
+                    <p>Artificial Intelligence</p>
+                </div>
+                <div class="card fade-up delay-500">
+                    <div class="card-icon"></div>
+                    <h3>Cyber</h3>
+                    <p>Cyber security</p>
+                </div>
                 <!-- End Member 3 -->
             </div>
         </div>
