--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation (Shared / Already Done) -->
     <nav class="navbar">
         <div class="container">
-            <h1 class="logo">IT Geeks<span class="dot">.</span></h1>
+            <h1 class="logo">IT Geeksjejdkwejd<span class="dot">.</span></h1>
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
